--- a/css/style.css
+++ b/css/style.css
@@ -371,7 +371,7 @@ header {
   background: rgba(0, 0, 0, 0.5);
 }
 .bg-header {
-  background: url(../img/bg-wrap2.jpg) no-repeat center center fixed;
+  background: url(../img/bg-wrap.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -440,9 +440,8 @@ header {
 .hightlight h1 {
   margin-top: 0;
   color: #555555;
-  text-transform: uppercase;
   font-family: 'Raleway', sans-serif;
-  font-weight: 400;
+  font-weight: 600;
 }
 .hightlight p {
   text-transform: capitalize;
